Fix CSS formatting and correct text alignment

--- a/style.css
+++ b/style.css
@@ -67,6 +67,8 @@ background-color:#fbf1f1;
 height:auto;
 font-size:20px;
 font-family:Audiowide;
+padding-top:10px;
+  
 
 }
 
